<resources>
    <!-- String MainActivity -->

    <string name="app_name">BesProject</string>
    <string name="buttonDz1">1</string>
    <string name="buttonDz2">2</string>
    <string name="buttonDz3">3</string>
    <string name="buttonDz4">4</string>
    <string name="buttonDz5">5</string>
    <string name="buttonDz6">6</string>
    <string name="buttonDz7">7</string>
    <string name="buttonDz8">8</string>
    <string name="headText">Мои ДЗ по курсу Android Разработка.</string>
    <!-- Finish string MainActivity -->


    <!-- Sting Dz1_Activity -->

    <string name="headTextDz1">Решение Дз №1</string>
    <string name="text1Dz1">Text 1</string>
    <string name="text2Dz1">Text 2</string>
    <string name="buttonClickDz1">Click Me</string>
    <!-- Finish string Dz1_Activity -->

    <!-- Sting Dz2_Activity -->
    <string name="headTextDz2">Решение Дз №2</string>
    <!-- Finish string Dz2_Activity -->

    <!-- Sting Dz3_Activity -->
    <string name="headTextDz3">Решение Дз №3</string>
    <string name="loadButton">Loading</string>
    <string name="randomButton">Random</string>
    <string name="transButton">Transform</string>
    <string name="urlImage">Enter URL IMAGE:</string>
    <string name="textViewDz3">If its hard for you to type URL then click this button!</string>
    <!-- Finish string Dz3_Activity -->

    <!-- Sting Dz4_Activity -->
    <string name="headTextDz4">Решение Дз №4</string>
    <!-- Finish string Dz4_Activity -->

    <!-- Sting Dz5_Activity -->
    <string name="headTextDz5">Решение Дз №5</string>
    <string name="imageStatusWifi">StatusWiFi</string>
    <string name="dz5_off">OFF</string>
    <string name="dz5_on">ON</string>
    <string name="wi_fi_settings">Wi-Fi Settings</string>
    <string name="status_wifi_dz5">Статус WIFI</string>
    <!-- Finish string Dz5_Activity -->

    <!-- Sting Dz6_Activity -->
    <string name="headTextDz6">Решение Дз №6</string>
    <string name="addPhone">Введите телефон</string>
    <string name="addGroup">Введите группу</string>
    <string name="addFoto">Ссылка на фото</string>
    <string name="addSurname">Введите Фамилию</string>
    <string name="addName">Введите Имя</string>
    <string name="addNewStudent">Add New Student</string>
    <string name="add_student">Add Student</string>
    <string name="textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <!-- Finish string Dz6_Activity -->

    <!-- Sting Dz7_Activity -->
    <string name="name">Имя:</string>
    <string name="surname">Фамилия:</string>
    <string name="groups">Группа:</string>
    <string name="phone">Телефон:</string>
    <string name="headTextDz8">Что-то произвойдёт через:</string>
    <!-- Finish string Dz7_Activity -->
</resources>
