<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dz5Activity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/headTextDz5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDz5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/status_wifi_dz5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageTestWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_test_wifi_75dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDz5"
        app:layout_constraintStart_toStartOf="@+id/textViewDz5"
        app:layout_constraintTop_toBottomOf="@+id/textViewDz5"
        android:contentDescription="@string/imageStatusWifi"/>

    <Switch
        android:id="@+id/wifi_switch_dz5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_dark"
        android:checked="false"
        android:text="@string/wi_fi_settings"
        android:textColor="@android:color/white"
        android:textOn="@string/dz5_on"
        android:textOff="@string/dz5_off"
        app:layout_constraintEnd_toEndOf="@+id/imageTestWifi"
        app:layout_constraintStart_toStartOf="@+id/imageTestWifi"
        app:layout_constraintTop_toBottomOf="@+id/imageTestWifi" />
</android.support.constraint.ConstraintLayout>